--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Keyreach's scrapheap</title>
 <style>
 body {
-	font: 400 12pt Clear Sans, Arial, Sans-serif;
+	font: 400 12pt Fira Sans OT, Arial, Sans-serif;
 }
 h1 {
 	margin: 0;
@@ -13,6 +13,7 @@ h1 {
 </head>
 <body>
 <h1 style='text-align:center'>keyreach's scrapheap</h1>
-<p style='text-align:center'>Move along. Nothing to see here yet.</p>
+<p style='text-align:center;padding-bottom:32px'>Move along. Nothing to see here yet.</p>
+<p style='text-align:center;font-size:small'>Last update: <script type='text/javascript'>document.write(document.lastModified)</script></p>
 </body>
 </html>
