Fixed schedule codepage

--- a/shedule2.htm
+++ b/shedule2.htm
@@ -1,6 +1,6 @@
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=cp1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <style>
 body {
   width: 800px;
@@ -46,18 +46,18 @@ td:nth-of-type(5) {
 <body>
 <table>
 <tr style='cursor:default;text-align:center;' id='daysbar'>
-  <th class=days onclick='showShedule(1, this)'>ПН</td>
-  <th class=days onclick='showShedule(2, this)'>ВТ</td>
-  <th class=days onclick='showShedule(3, this)'>СР</td>
-  <th class=days onclick='showShedule(4, this)'>ЧТ</td>
-  <th class=days onclick='showShedule(5, this)'>ПТ</td>
-  <th class=days onclick='showShedule(6, this)'>СБ</td>
+  <th class=days onclick='showShedule(1, this)'>РџРќ</td>
+  <th class=days onclick='showShedule(2, this)'>Р’Рў</td>
+  <th class=days onclick='showShedule(3, this)'>РЎР </td>
+  <th class=days onclick='showShedule(4, this)'>Р§Рў</td>
+  <th class=days onclick='showShedule(5, this)'>РџРў</td>
+  <th class=days onclick='showShedule(6, this)'>РЎР‘</td>
 </tr>
 </table>
 <div class=day id=day1>
 <table>
-<tr><td>1</td><td>08:30 - 10:00</td><td>Физическая культура</td><td>Практика</td><td></td></tr>
-<tr><td>2</td><td>10:15 - 11:45</td><td>Правоведние</td><td>Практика</td><td>Р-237</td></tr>
+<tr><td>1</td><td>08:30 - 10:00</td><td>Р¤РёР·РёС‡РµСЃРєР°СЏ РєСѓР»СЊС‚СѓСЂР°</td><td>РџСЂР°РєС‚РёРєР°</td><td></td></tr>
+<tr><td>2</td><td>10:15 - 11:45</td><td>РџСЂР°РІРѕРІРµРґРЅРёРµ</td><td>РџСЂР°РєС‚РёРєР°</td><td>Р -237</td></tr>
 <tr><td>3</td><td>12:00 - 13:30</td><td></td><td></td><td></td></tr>
 <tr><td>4</td><td>14:15 - 15:45</td><td></td><td></td><td></td></tr>
 <tr><td>5</td><td>16:00 - 17:30</td><td></td><td></td><td></td></tr>
@@ -75,34 +75,34 @@ td:nth-of-type(5) {
 <div class=day id=day3>
 <table>
 <tr><td>1</td><td>08:30 - 10:00</td><td></td><td></td><td></td></tr>
-<tr><td>2</td><td>10:15 - 11:45</td><td>Теория вероятностей и матстатистика</td><td>Лекция</td><td>Р-339</td></tr>
-<tr><td>3</td><td>12:00 - 13:30</td><td>Схемотехника</td><td>Лекция</td><td>Р-237</td></tr>
-<tr><td>4</td><td>14:15 - 15:45</td><td>Матпрограммирование</td><td>Лекция</td><td>Р-345</td></tr>
+<tr><td>2</td><td>10:15 - 11:45</td><td>РўРµРѕСЂРёСЏ РІРµСЂРѕСЏС‚РЅРѕСЃС‚РµР№ Рё РјР°С‚СЃС‚Р°С‚РёСЃС‚РёРєР°</td><td>Р›РµРєС†РёСЏ</td><td>Р -339</td></tr>
+<tr><td>3</td><td>12:00 - 13:30</td><td>РЎС…РµРјРѕС‚РµС…РЅРёРєР°</td><td>Р›РµРєС†РёСЏ</td><td>Р -237</td></tr>
+<tr><td>4</td><td>14:15 - 15:45</td><td>РњР°С‚РїСЂРѕРіСЂР°РјРјРёСЂРѕРІР°РЅРёРµ</td><td>Р›РµРєС†РёСЏ</td><td>Р -345</td></tr>
 <tr><td>5</td><td>16:00 - 17:30</td><td></td><td></td><td></td></tr>
 </table>
 </div>
 <div class=day id=day4>
 <table>
 <tr><td>1</td><td>08:30 - 10:00</td><td></td><td></td><td></td></tr>
-<tr><td>2</td><td>10:15 - 11:45</td><td>Численные методы</td><td>Лекция</td><td>Р-143</td></tr>
-<tr><td>3</td><td>12:00 - 13:30</td><td>Численные методы</td><td>Практика</td><td>Р-345</td></tr>
-<tr><td>4</td><td>14:15 - 15:45</td><td>Теория вероятностей и матстатистика</td><td>Практика</td><td>Р-048</td></tr>
+<tr><td>2</td><td>10:15 - 11:45</td><td>Р§РёСЃР»РµРЅРЅС‹Рµ РјРµС‚РѕРґС‹</td><td>Р›РµРєС†РёСЏ</td><td>Р -143</td></tr>
+<tr><td>3</td><td>12:00 - 13:30</td><td>Р§РёСЃР»РµРЅРЅС‹Рµ РјРµС‚РѕРґС‹</td><td>РџСЂР°РєС‚РёРєР°</td><td>Р -345</td></tr>
+<tr><td>4</td><td>14:15 - 15:45</td><td>РўРµРѕСЂРёСЏ РІРµСЂРѕСЏС‚РЅРѕСЃС‚РµР№ Рё РјР°С‚СЃС‚Р°С‚РёСЃС‚РёРєР°</td><td>РџСЂР°РєС‚РёРєР°</td><td>Р -048</td></tr>
 <tr><td>5</td><td>16:00 - 17:30</td><td></td><td></td><td></td></tr>
 </table>
 </div>
 <div class=day id=day5>
 <table>
-<tr><td>1</td><td>08:30 - 10:00</td><td>Английский язык</td><td>Практика</td><td>Р-146</td></tr>
-<tr><td>2</td><td>10:15 - 11:45</td><td>Метрология</td><td>Лекция</td><td>Р-237</td></tr>
-<tr><td>3</td><td>12:00 - 13:30</td><td>МОАП</td><td>Лекция</td><td>Р-342</td></tr>
-<tr><td>4</td><td>14:15 - 15:45</td><td>Правоведение</td><td>Лекция</td><td>Р-339</td></tr>
+<tr><td>1</td><td>08:30 - 10:00</td><td>РђРЅРіР»РёР№СЃРєРёР№ СЏР·С‹Рє</td><td>РџСЂР°РєС‚РёРєР°</td><td>Р -146</td></tr>
+<tr><td>2</td><td>10:15 - 11:45</td><td>РњРµС‚СЂРѕР»РѕРіРёСЏ</td><td>Р›РµРєС†РёСЏ</td><td>Р -237</td></tr>
+<tr><td>3</td><td>12:00 - 13:30</td><td>РњРћРђРџ</td><td>Р›РµРєС†РёСЏ</td><td>Р -342</td></tr>
+<tr><td>4</td><td>14:15 - 15:45</td><td>РџСЂР°РІРѕРІРµРґРµРЅРёРµ</td><td>Р›РµРєС†РёСЏ</td><td>Р -339</td></tr>
 <tr><td>5</td><td>16:00 - 17:30</td><td></td><td></td><td></td></tr>
 </table>
 </div>
 <div class=day id=day6>
 <table>
-<tr><td>1</td><td>08:30 - 10:00</td><td>Очобы теории сигналов</td><td>Лекция</td><td>Р-146</td></tr>
-<tr><td>2</td><td>10:15 - 11:45</td><td>Физическая культура</td><td>Практика</td><td></td></tr>
+<tr><td>1</td><td>08:30 - 10:00</td><td>РћС‡РѕР±С‹ С‚РµРѕСЂРёРё СЃРёРіРЅР°Р»РѕРІ</td><td>Р›РµРєС†РёСЏ</td><td>Р -146</td></tr>
+<tr><td>2</td><td>10:15 - 11:45</td><td>Р¤РёР·РёС‡РµСЃРєР°СЏ РєСѓР»СЊС‚СѓСЂР°</td><td>РџСЂР°РєС‚РёРєР°</td><td></td></tr>
 <tr><td>3</td><td>12:00 - 13:30</td><td></td><td></td><td></td></tr>
 <tr><td>4</td><td>14:15 - 15:45</td><td></td><td></td><td></td></tr>
 <tr><td>5</td><td>16:00 - 17:30</td><td></td><td></td><td></td></tr>
