--- a/schedule.htm
+++ b/schedule.htm
@@ -2,8 +2,11 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <style>
+* {
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+}
 body {
-  width: 800px;
   max-width: 100%;
   margin: 0 auto;
 }
@@ -36,15 +39,22 @@ td:nth-of-type(5) {
 .day {
   display: none;
   border: 2px solid #48A;
+  height: 90%;
+}
+.day table {
+	height: 100%;
 }
 .days:hover, .active {
   background: #48A;
   color: #FFF;
 }
+#topside {
+	height: 10%;
+}
 </style>
 </head>
 <body>
-<table>
+<table id='topside'>
 <tr style='cursor:default;text-align:center;' id='daysbar'>
   <th class=days onclick='showShedule(1, this)'>ПН</td>
   <th class=days onclick='showShedule(2, this)'>ВТ</td>
