--- a/schedule.htm
+++ b/schedule.htm
@@ -17,6 +17,7 @@ table {
 }
 td, th {
   padding: 6px;
+  font-size: 150%;
 }
 td:nth-of-type(1) {
   width: 3%;
@@ -111,7 +112,7 @@ td:nth-of-type(5) {
 </div>
 <div class=day id=day6>
 <table>
-<tr><td>1</td><td>08:30 - 10:00</td><td>Очобы теории сигналов</td><td>Лекция</td><td>Р-146</td></tr>
+<tr><td>1</td><td>08:30 - 10:00</td><td>Основы теории сигналов</td><td>Лекция</td><td>Р-146</td></tr>
 <tr><td>2</td><td>10:15 - 11:45</td><td>Физическая культура</td><td>Практика</td><td></td></tr>
 <tr><td>3</td><td>12:00 - 13:30</td><td></td><td></td><td></td></tr>
 <tr><td>4</td><td>14:15 - 15:45</td><td></td><td></td><td></td></tr>
