--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ h1 {
 </head>
 <body>
 <h1 style='text-align:center'>keyreach's scrapheap</h1>
-<p style='text-align:center;padding-bottom:32px'>Move along. Nothing to see here yet.</p>
-<p style='text-align:center;font-size:small'>Last update: <script type='text/javascript'>document.write(document.lastModified)</script></p>
+<p style='text-align:center;padding-bottom:32px'>Двиньте вперёд. Ничего увидеть здесь ещё.</p>
+<p style='text-align:center;font-size:small'>Последний коммит: <script type='text/javascript'>document.write(document.lastModified)</script></p>
 </body>
 </html>
