--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <title>Keyreach's scrapheap</title>
 <style>
 body {
@@ -9,11 +10,26 @@ h1 {
 	margin: 0;
 	padding: 32px;
 }
+a {
+	display: inline-block;
+	text-decoration: none;
+	color: inherit;
+	border-bottom: 1px solid #000;
+	padding: 4px;
+	transition: color 1s ease;
+}
+a:hover {
+	color: #08F;
+	border-bottom: 3px solid #08F;
+	padding-bottom: 2px;
+}
 </style>
 </head>
 <body>
 <h1 style='text-align:center'>keyreach's scrapheap</h1>
-<p style='text-align:center;padding-bottom:32px'>Двиньте вперёд. Ничего увидеть здесь ещё.</p>
+<p style='text-align:center;padding-bottom:32px'>
+<a href='http://keyreach.github.io/schedule.htm'>Расписание</a>
+</p>
 <p style='text-align:center;font-size:small'>Последний коммит: <script type='text/javascript'>document.write(document.lastModified)</script></p>
 </body>
 </html>
