--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <title>Keyreach's scrapheap</title>
 <style>
 body {
-	font: 400 12pt Fira Sans OT, Arial, Sans-serif;
+	font: 300 12pt Fira Sans OT, Arial, Sans-serif;
 }
 h1 {
 	margin: 0;
 	padding: 32px;
+	font-weight: 600;
 }
 a {
 	display: inline-block;
@@ -16,7 +17,6 @@ a {
 	color: inherit;
 	border-bottom: 1px solid #000;
 	padding: 4px;
-	transition: color 1s ease;
 }
 a:hover {
 	color: #08F;
@@ -29,6 +29,7 @@ a:hover {
 <h1 style='text-align:center'>keyreach's scrapheap</h1>
 <p style='text-align:center;padding-bottom:32px'>
 <a href='http://keyreach.github.io/schedule.htm'>Расписание</a>
+<a href='http://keyreach.github.io/jside.htm'>JSIDE</a>
 </p>
 <p style='text-align:center;font-size:small'>Последний коммит: <script type='text/javascript'>document.write(document.lastModified)</script></p>
 </body>
