--- a/index.html
+++ b/index.html
@@ -4,32 +4,36 @@
 <title>Keyreach's scrapheap</title>
 <style>
 body {
-	font: 300 12pt Fira Sans OT, Arial, Sans-serif;
+	font: 				300 12pt Fira Sans OT, Arial, Sans-serif;
 }
 h1 {
-	margin: 0;
-	padding: 32px;
-	font-weight: 600;
+	margin: 			0;
+	padding: 			32px;
+	font-weight: 		600;
 }
 a {
-	display: inline-block;
-	text-decoration: none;
-	color: inherit;
-	border-bottom: 1px solid #000;
-	padding: 4px;
+	display: 			inline-block;
+	text-decoration: 	none;
+	color: 				#FFF;
+	background: 		#444;
+	padding: 			8px 16px;
+	min-width: 			96px;
 }
 a:hover {
-	color: #08F;
-	border-bottom: 3px solid #08F;
-	padding-bottom: 2px;
+	background: 		#4a4;
+}
+@media handheld {
+	a {
+		display: 		block;
+		width: 			100%;
+	}
 }
 </style>
 </head>
 <body>
 <h1 style='text-align:center'>keyreach's scrapheap</h1>
 <p style='text-align:center;padding-bottom:32px'>
-<a href='http://keyreach.github.io/schedule.htm'>Расписание</a>
-<a href='http://keyreach.github.io/jside.htm'>JSIDE</a>
+<a href='http://keyreach.github.io/schedule.htm'>Расписание</a><a href='http://keyreach.github.io/jside.htm'>JSIDE</a>
 </p>
 <p style='text-align:center;font-size:small'>Последний коммит: <script type='text/javascript'>document.write(document.lastModified)</script></p>
 </body>
