--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+<meta name="viewport" content="width=480,user-scalable=false" />
 <title>Keyreach's scrapheap</title>
 <style>
 body {
@@ -9,7 +10,7 @@ body {
 h1 {
 	margin: 			0;
 	padding: 			32px;
-	font-weight: 		600;
+	font-weight: 			600;
 }
 a {
 	display: 			inline-block;
