Added mobile view

--- a/jside.htm
+++ b/jside.htm
@@ -1,6 +1,8 @@
 <html>
 <head>
 <title>JSIDE</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+<meta name="viewport" content="width=480,user-scalable=false" />
 <style>
 * {
 	-moz-box-sizing: border-box;
