--- a/jside.htm
+++ b/jside.htm
@@ -21,7 +21,7 @@ body {
 	border-bottom: 1px solid #000;
 }
 #toolbar div {
-	font:400 10pt Segoe UI;
+	font:400 1.5em Segoe UI;
 	height: 100%;
 	background: #FFF;
 	padding: 6px;
