Nikicz colour example: fixed codepage

--- a/nikicz-colr.htm
+++ b/nikicz-colr.htm
@@ -1,15 +1,18 @@
 <html>
+<head>
+<meta charset='utf-8'>
+</head>
 <body>
 <div id='cubique' style='width:250px;height:250px;border:2px solid #000'></div>
 </body>
 <script>
-qubiq = document.getElementById('cubique'); 				// элемент, у которого собираемся изменять цвет и по которому корочи водить дохляком
-															// для тела документа - document.body
-qubiq.onmousemove = function(event){						// делаем анонимную функцию - обработчик события перемещения дохляка (onmousemove) по элементу
-	a = Math.floor((event.pageX/qubiq.offsetWidth)*360); 	// получаем hue, т.е. оттенок, таким методом: (координата/длина)*максимальное значение, округляем и присваиваем переменной h
-	b = Math.floor((event.pageY/qubiq.offsetHeight)*100);	// то же самое для какого-нибудь второго параметра (у меня lightness) и оси абсцисс
-	qubiq.style.backgroundColor = 'hsl('+a+',50%,'+b+'%)';	// присваиваем свойству backgroundColor элемента наши значения в формате HSL, для saturation - 50%
-															// можно пользовать rgb(), только убрать проценты и указать максимумы переменных - 255
+qubiq = document.getElementById('cubique'); 				// СЌР»РµРјРµРЅС‚, Сѓ РєРѕС‚РѕСЂРѕРіРѕ СЃРѕР±РёСЂР°РµРјСЃСЏ РёР·РјРµРЅСЏС‚СЊ С†РІРµС‚ Рё РїРѕ РєРѕС‚РѕСЂРѕРјСѓ РєРѕСЂРѕС‡Рё РІРѕРґРёС‚СЊ РґРѕС…Р»СЏРєРѕРј
+															// РґР»СЏ С‚РµР»Р° РґРѕРєСѓРјРµРЅС‚Р° - document.body
+qubiq.onmousemove = function(event){						// РґРµР»Р°РµРј Р°РЅРѕРЅРёРјРЅСѓСЋ С„СѓРЅРєС†РёСЋ - РѕР±СЂР°Р±РѕС‚С‡РёРє СЃРѕР±С‹С‚РёСЏ РїРµСЂРµРјРµС‰РµРЅРёСЏ РґРѕС…Р»СЏРєР° (onmousemove) РїРѕ СЌР»РµРјРµРЅС‚Сѓ
+	a = Math.floor((event.pageX/qubiq.offsetWidth)*360); 	// РїРѕР»СѓС‡Р°РµРј hue, С‚.Рµ. РѕС‚С‚РµРЅРѕРє, С‚Р°РєРёРј РјРµС‚РѕРґРѕРј: (РєРѕРѕСЂРґРёРЅР°С‚Р°/РґР»РёРЅР°)*РјР°РєСЃРёРјР°Р»СЊРЅРѕРµ Р·РЅР°С‡РµРЅРёРµ, РѕРєСЂСѓРіР»СЏРµРј Рё РїСЂРёСЃРІР°РёРІР°РµРј РїРµСЂРµРјРµРЅРЅРѕР№ h
+	b = Math.floor((event.pageY/qubiq.offsetHeight)*100);	// С‚Рѕ Р¶Рµ СЃР°РјРѕРµ РґР»СЏ РєР°РєРѕРіРѕ-РЅРёР±СѓРґСЊ РІС‚РѕСЂРѕРіРѕ РїР°СЂР°РјРµС‚СЂР° (Сѓ РјРµРЅСЏ lightness) Рё РѕСЃРё Р°Р±СЃС†РёСЃСЃ
+	qubiq.style.backgroundColor = 'hsl('+a+',50%,'+b+'%)';	// РїСЂРёСЃРІР°РёРІР°РµРј СЃРІРѕР№СЃС‚РІСѓ backgroundColor СЌР»РµРјРµРЅС‚Р° РЅР°С€Рё Р·РЅР°С‡РµРЅРёСЏ РІ С„РѕСЂРјР°С‚Рµ HSL, РґР»СЏ saturation - 50%
+															// РјРѕР¶РЅРѕ РїРѕР»СЊР·РѕРІР°С‚СЊ rgb(), С‚РѕР»СЊРєРѕ СѓР±СЂР°С‚СЊ РїСЂРѕС†РµРЅС‚С‹ Рё СѓРєР°Р·Р°С‚СЊ РјР°РєСЃРёРјСѓРјС‹ РїРµСЂРµРјРµРЅРЅС‹С… - 255
 }
 </script>
 </html>
