--- a/timetable.htm
+++ b/timetable.htm
@@ -4,7 +4,7 @@
 <style>
 @font-face {
     font-family: Fixedsys Excelsior;
-    src: url(fsex300.ttf);
+    src: url(http://keyreach.github.io/FSEX300.ttf);
 }
 body {
 	text-align: center;
