--- a/timetable.htm
+++ b/timetable.htm
@@ -1,5 +1,6 @@
 <html>
 <head>
+<meta name="viewport" content="width=device-width, target-densityDpi=device-dpi">
 <meta charset='utf-8'>
 <style>
 @font-face {
