--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,7 @@
 <html>
 <head>
 <meta charset='utf-8'>
+<meta name="viewport" content="width=480,user-scalable=false" />
 <style>
 * {
   -moz-box-sizing: border-box;
