box-sizing fixed

--- a/index.htm
+++ b/index.htm
@@ -4,6 +4,7 @@
 <meta name="viewport" content="width=480,user-scalable=false" />
 <style>
 * {
+  box-sizing: border-box;
   -moz-box-sizing: border-box;
 }
 body {
