--- a/index.htm
+++ b/index.htm
@@ -9,7 +9,7 @@
 }
 body {
   margin: 0;
-  font: 400 12pt Clear Sans;
+  font: 400 14pt Clear Sans, sans-serif;
   width: 100%;
 }
 #topptekst {
@@ -19,7 +19,6 @@ body {
   width: 100%;
   height: 48px;
   padding: 0;
-  padding-left: 48px;
   background: #4a4;
   color: #fff;
   font-weight: bold;
