--- a/ru.htm
+++ b/ru.htm
@@ -25,6 +25,10 @@ body {
   font-weight: bold;
   border-bottom: 2px solid #282;
   text-align: center;
+  background-image: url('kde.png');
+  background-position: 0 0;
+  background-size: 48px 48px;
+  background-repeat: no-repeat;
 }
 #boksen {
   margin: 0 auto;
@@ -56,20 +60,20 @@ body {
 <body>
 
 <div id=topptekst>
-  S&Oslash;PPELPLASS
+  СВАЛКА
 </div>
 <div id=boksen>
-  <b>Hoved</b>
-  <a href=http://keyreach.github.io/timetable.htm>Timeplan</a>
-  <a href=http://keyreach.github.io/jside.htm>Utviklingsmilj&oslash; #1</a>
-  <a href=http://keyreach.github.io/klingsmiljo.htm>Utviklingsmilj&oslash; #2</a>
-  <b>Den Nikicz eksempler</b>
-  <a href=http://keyreach.github.io/nikicz-clock.htm>Klokken</a>
-  <a href=http://keyreach.github.io/nikicz-colr.htm>Fargen</a>
-  <a href=http://keyreach.github.io/nikicz-cubique.htm>Den spretter boksen</a>
+  <b>Основное</b>
+  <a href=http://keyreach.github.io/timetable.htm>Расписание</a>
+  <a href=http://keyreach.github.io/jside.htm>ИДЕ #1</a>
+  <a href=http://keyreach.github.io/klingsmiljo.htm>ИДЕ #2</a>
+  <b>Примеры Никича</b>
+  <a href=http://keyreach.github.io/nikicz-clock.htm>Часы</a>
+  <a href=http://keyreach.github.io/nikicz-colr.htm>Цвета</a>
+  <a href=http://keyreach.github.io/nikicz-cubique.htm>Летающий квадрат</a>
   <b>Tilbakemelding</b>
-  <a href=http://keyreach.tumblr.com>Meg p&aring; Tumblr</a>
-  <a href=http://keyreach.github.io/ru.htm>Side i russisk / Версия на русском</a>
+  <a href=http://keyreach.tumblr.com>Я на Tumblr</a>
+  <a href=http://keyreach.github.io/>Норвежская версия / Side i norsk</a>
 </div>
 
 </body>
