--- a/index.htm
+++ b/index.htm
@@ -14,10 +14,8 @@ body {
   width: 100%;
 }
 #topptekst {
-  position: fixed;
-  top: 0;
-  left: 0;
   width: 100%;
+  max-width: 800px;
   height: 48px;
   padding: 13px;
   background: #4a4;
@@ -69,7 +67,7 @@ body {
   <a href=http://keyreach.github.io/nikicz-cubique.htm>Den spretter boksen</a>
   <b>Tilbakemelding</b>
   <a href=http://keyreach.tumblr.com>Meg p&aring; Tumblr</a>
-  <a href=http://keyreach.github.io/ru.htm>Side i russisk / Р’РµСЂСЃРёСЏ РЅР° СЂСѓСЃСЃРєРѕРј</a>
+  <a href=http://keyreach.github.io/ru.htm>Side i russisk / Версия на русском</a>
 </div>
 
 </body>
