--- a/ru.htm
+++ b/ru.htm
@@ -14,10 +14,8 @@ body {
   width: 100%;
 }
 #topptekst {
-  position: fixed;
-  top: 0;
-  left: 0;
   width: 100%;
+  max-width: 800px;
   height: 48px;
   padding: 13px;
   background: #4a4;
