--- a/index.htm
+++ b/index.htm
@@ -16,6 +16,7 @@ body {
 #topptekst {
   width: 100%;
   max-width: 800px;
+  margin: 0 auto;
   height: 48px;
   padding: 13px;
   background: #4a4;
@@ -26,7 +27,6 @@ body {
 }
 #boksen {
   margin: 0 auto;
-  margin-top: 48px;
   padding: 0px;
   width: 100%;
   max-width: 800px;
