--- a/index.htm
+++ b/index.htm
@@ -12,25 +12,30 @@ body {
   margin: 0;
   font: 400 14pt Clear Sans, Roboto, sans-serif;
   width: 100%;
+  background: #DDD;
 }
 #topptekst {
   width: 100%;
-  max-width: 800px;
-  margin: 0 auto;
   height: 48px;
   padding: 13px;
   background: #4a4;
   color: #fff;
   font-weight: bold;
-  border-bottom: 2px solid #282;
+  border-bottom: 2px solid #171;
   text-align: center;
+  background-image: url('kde.png');
+  background-position: 0 0;
+  background-size: 48px 48px;
+  background-repeat: no-repeat;
 }
 #boksen {
   margin: 0 auto;
   padding: 0px;
   width: 100%;
   max-width: 800px;
-  box-shadow: 0 0 12px 1px #888;
+  border-left: 1px solid #888;
+  border-right: 1px solid #888;
+  background: #FFF;
 }
 #boksen a {
   display: block;
@@ -67,7 +72,7 @@ body {
   <a href=http://keyreach.github.io/nikicz-cubique.htm>Den spretter boksen</a>
   <b>Tilbakemelding</b>
   <a href=http://keyreach.tumblr.com>Meg p&aring; Tumblr</a>
-  <a href=http://keyreach.github.io/ru.htm>Side i russisk / Версия на русском</a>
+  <a href=http://keyreach.github.io/ru.htm>Side i russisk / Р’РµСЂСЃРёСЏ РЅР° СЂСѓСЃСЃРєРѕРј</a>
 </div>
 
 </body>
