--- a/ru.htm
+++ b/ru.htm
@@ -12,17 +12,16 @@ body {
   margin: 0;
   font: 400 14pt Clear Sans, Roboto, sans-serif;
   width: 100%;
+  background: #DDD;
 }
 #topptekst {
   width: 100%;
-  max-width: 800px;
-  margin: 0 auto;
   height: 48px;
   padding: 13px;
   background: #4a4;
   color: #fff;
   font-weight: bold;
-  border-bottom: 2px solid #282;
+  border-bottom: 2px solid #171;
   text-align: center;
   background-image: url('kde.png');
   background-position: 0 0;
@@ -34,7 +33,9 @@ body {
   padding: 0px;
   width: 100%;
   max-width: 800px;
-  box-shadow: 0 0 12px 1px #888;
+  border-left: 1px solid #888;
+  border-right: 1px solid #888;
+  background: #FFF;
 }
 #boksen a {
   display: block;
