Matlabd link was added

--- a/index.htm
+++ b/index.htm
@@ -63,9 +63,10 @@ body {
 </div>
 <div id=boksen>
   <b>Hoved</b>
-  <a href=http://keyreach.github.io/timetable.htm>Timeplan</a>
+  <a href=http://keyreach.github.io/timeplan.htm>Timeplan</a>
   <a href=http://keyreach.github.io/jside.htm>Utviklingsmilj&oslash; #1</a>
   <a href=http://keyreach.github.io/klingsmiljo.htm>Utviklingsmilj&oslash; #2</a>
+  <a href=https://github.com/Keyreach/Matlabd>Mitt Matlab arbeid</a>
   <b>Den Nikicz eksempler</b>
   <a href=http://keyreach.github.io/nikicz-clock.htm>Klokken</a>
   <a href=http://keyreach.github.io/nikicz-colr.htm>Fargen</a>
