--- a/index.htm
+++ b/index.htm
@@ -1,80 +1,44 @@
 <html>
 <head>
-<meta charset='utf-8'>
-<meta name="viewport" content="width=480,user-scalable=false" />
+<title>CBA&Lambda;KA</title>
 <style>
-* {
-  box-sizing: border-box;
-  -webkit-box-sizing: border-box; 
-  -moz-box-sizing: border-box;
-}
 body {
-  margin: 0;
-  font: 400 14pt Clear Sans, Roboto, sans-serif;
-  width: 100%;
-  background: #DDD;
+	font: 400 10pt Roboto;
 }
-#topptekst {
-  width: 100%;
-  height: 48px;
-  padding: 13px;
-  background: #4a4;
-  color: #fff;
-  font-weight: bold;
-  border-bottom: 2px solid #171;
-  text-align: center;
-  background-image: url('kde.png');
-  background-position: 0 0;
-  background-size: 48px 48px;
-  background-repeat: no-repeat;
+.u0 {
+	margin: 4px 0px 0px 4px;
+	font-size: 20pt;
+	font-weight: 800;
+	text-align: center;
 }
-#boksen {
-  margin: 0 auto;
-  padding: 0px;
-  width: 100%;
-  max-width: 800px;
-  border-left: 1px solid #888;
-  border-right: 1px solid #888;
-  background: #FFF;
+.u1 {
+	margin-bottom: 12px;
+	font-size: 11pt;
+	font-weight: 400;
+	text-align: center;
+	color: #222;
 }
-#boksen a {
-  display: block;
-  width: 100%;
-  padding: 22px;
-  text-decoration: none;
-  color: #444;
-}
-#boksen b {
-  display: block;
-  width: 100%;
-  padding: 22px;
-  color: #000;  
-  border-bottom: 2px solid #888;
-}
-#boksen a:hover {
-  background: #DDD;
-  color: #000;
+a {
+	display: inline-block;
+	margin: 4px 0px 0px 4px;
+	padding: 8px;
+	width: 120px;
+	height: 90px;
+	border: 1px solid #888;
+	text-decoration: none;
+	color: #555;
+	overflow: hidden;
 }
 </style>
+</head>
 <body>
-
-<div id=topptekst>
-  S&Oslash;PPELPLASS
-</div>
-<div id=boksen>
-  <b>Hoved</b>
-  <a href=http://keyreach.github.io/timeplan.htm>Timeplan</a>
-  <a href=http://keyreach.github.io/jside.htm>Utviklingsmilj&oslash; #1</a>
-  <a href=http://keyreach.github.io/klingsmiljo.htm>Utviklingsmilj&oslash; #2</a>
-  <a href=https://github.com/Keyreach/Matlabd>Mitt Matlab arbeid</a>
-  <b>Den Nikicz eksempler</b>
-  <a href=http://keyreach.github.io/nikicz-clock.htm>Klokken</a>
-  <a href=http://keyreach.github.io/nikicz-colr.htm>Fargen</a>
-  <a href=http://keyreach.github.io/nikicz-cubique.htm>Den spretter boksen</a>
-  <b>Tilbakemelding</b>
-  <a href=http://keyreach.tumblr.com>Meg p&aring; Tumblr</a>
-  <a href=http://keyreach.github.io/ru.htm>Side i russisk / Версия на русском</a>
-</div>
-
+<div class=u0>CBA&Lambda;KA</div>
+<div class=u1>A pile of various stuff</div>
+<a href=timetable.htm><b>TIME</b>TABLE</a>
+<a href=thelife.htm><b>CONWAY</b>LIFE</a>
+<a href=nikicz-clock.htm><b>CLOCK</b>DEMO</a>
+<a href=nikicz-colr.htm><b>COLOUR</b>PICKER</a>
+<a href=nikicz-cubique.htm><b>BOUNCING</b>BOX</a>
+<a href=kq_index.htm><b>THE</b>KONQUEST</a>
 </body>
-</html>
+</head>
