--- a/index.htm
+++ b/index.htm
@@ -1,44 +1,50 @@
 <html>
 <head>
-<title>CBA&Lambda;KA</title>
+<meta charset='utf-8'>
+<title>keyreach</title>
 <style>
+html {
+	background: #DDD;
+}
 body {
-	font: 400 10pt Roboto;
+	box-shadow: 0px 0px 4px 1px rgba(0,0,0,0.2);
+	width: 800px;
+	margin: 0 auto 16px;
+	font: 400 10pt Clear Sans;
+	padding: 0 16px 16px;
+	background: #FFF;
+	color: #111;
 }
-.u0 {
-	margin: 4px 0px 0px 4px;
-	font-size: 20pt;
-	font-weight: 800;
-	text-align: center;
-}
-.u1 {
-	margin-bottom: 12px;
-	font-size: 11pt;
-	font-weight: 400;
-	text-align: center;
-	color: #222;
+h1 {
+	margin: 0;
+	padding: 16px 0;
 }
 a {
-	display: inline-block;
-	margin: 4px 0px 0px 4px;
-	padding: 8px;
-	width: 120px;
-	height: 90px;
-	border: 1px solid #888;
+	display: block;
+	font: 600 14pt Clear Sans;
 	text-decoration: none;
-	color: #555;
-	overflow: hidden;
+	color: #000;
+}
+p {
+	color: #333;
 }
 </style>
 </head>
 <body>
-<div class=u0>CBA&Lambda;KA</div>
-<div class=u1>A pile of various stuff</div>
-<a href=timetable.htm><b>TIME</b>TABLE</a>
-<a href=thelife.htm><b>CONWAY</b>LIFE</a>
-<a href=nikicz-clock.htm><b>CLOCK</b>DEMO</a>
-<a href=nikicz-colr.htm><b>COLOUR</b>PICKER</a>
-<a href=nikicz-cubique.htm><b>BOUNCING</b>BOX</a>
-<a href=kq_index.htm><b>THE</b>KONQUEST</a>
+<h1>keyreach's stuff</h1>
+<a href=jside.htm>jside</a>
+<p>tool to quick creation of javascript code snippets</p>
+<a href=kq_index.htm>konquest</a>
+<p>turn-based strategy about conquest of galaxy featuring hotseat mode</p>
+<a href=thelife.htm>thelife</a>
+<p>nothing special, just realisation of conway's game of life</p>
+<a href=b-race.htm>b-race</a>
+<p>abandoned scroller-race</p>
+<a href=matlab.htm>matlab stuff</a>
+<p>various computational science stuff for matlab</p>
+<a href=nikicz.htm>nikicz's corner</a>
+<p>useless html/css/js demos</p>
+<a href=profile.htm>about me</a>
+<p>some information about me</p>
 </body>
-</head>
+</html>
