--- a/kubacz.htm
+++ b/kubacz.htm
@@ -1,14 +1,29 @@
 <!doctype html>
 <html>
 <head>
-<title>KUBACZ</title>
+<title>KUBATEST</title>
 <meta charset='utf-8'>
+<style>
+body {
+	background: #080808;
+	color: #CCC;
+	text-align: center;
+	font: 400 24pt keyrus;
+}
+</style>
 </head>
 <body>
+
+<p>PiXELMAИ ADVEИTUЯES // <span id='scorer'>0</span></p>
 <canvas height='480' width='640' id='kanwas'>
 </canvas>
 </body>
 <script>
+var botx = [];
+var boty = [];
+var botc = [];
+var score = 0;
+var coin = 1;
 var mov = 0;
 var jmp = 0;
 var x = y = 3;
@@ -37,9 +52,49 @@ function drawSkreen(){
 			} else if(skreen[i][j] == 2){
 				ktx.fillStyle = "#195";
 				ktx.fillRect(i*b,j*b,b,b);
+			} else if(skreen[i][j] == 3){
+				ktx.fillStyle = "#991";
+				ktx.fillRect(i*b,j*b,b,b);
+			} else if((skreen[i][j] == 9)||(skreen[i][j] == 8)){
+				ktx.fillStyle = "#911";
+				ktx.fillRect(i*b,j*b,b,b);
 			}
 		}
 	}	
+}
+function moveNpc(){
+	for(p=0;p<botx.length;p++){
+		if(skreen[botx[p]][boty[p]+1]==1){
+			if((Math.abs(boty[p] - y) <= 4)&&(Math.abs(botx[p] - x) <= 16)){
+				if(botc[p]==1){
+					skreen[botx[p]][boty[p]] = 3;
+				} else {
+					skreen[botx[p]][boty[p]] = 0;
+				}
+				botc[p] = 0;
+				d = (x >= botx[p] ? 1 : -1);
+				botx[p] += d;
+				if(skreen[botx[p]][boty[p]]==3){
+					botc[p] = 1;
+				}
+			}
+		} else {
+			if(botc[p]==1){
+				skreen[botx[p]][boty[p]] = 3;
+			} else {
+				skreen[botx[p]][boty[p]] = 0;
+			}
+			botc[p] = 0;
+			boty[p]++;
+			if(skreen[botx[p]][boty[p]]==3){
+					botc[p] = 1;
+			}
+		}
+	}
+	for(p=0;p<botx.length;p++){
+		skreen[botx[p]][boty[p]] = 9;
+	}
+	drawSkreen();
 }
 function movePc(dir){
 	if(chkPos(dir)){
@@ -54,25 +109,30 @@ function movePc(dir){
 			case 7: x--; y--; break;
 			case 9: x++; y--; break;
 		}
+		if(skreen[x][y]==3){
+			score += coin;
+			document.getElementById('scorer').innerHTML = score;
+		}
+		if(skreen[x][y]==9){
+			alert('gotcha');
+			score = 0;
+			document.getElementById('scorer').innerHTML = score;
+		}
 		skreen[x][y] = 2;
 		drawSkreen();
 	}
 }
 function chkPos(dir){
 	switch(dir){
-		case 6: if(skreen[x+1][y]!=0) return 0; break;
-		case 2: if(skreen[x][y+1]!=0) return 0; break;
-		case 4: if(skreen[x-1][y]!=0) return 0; break;
-		case 8: if(skreen[x][y-1]!=0) return 0; break;
-		case 3: if(skreen[x+1][y+1]!=0) return 0; break;
-		case 1: if(skreen[x-1][y+1]!=0) return 0; break;
-		case 7: if(skreen[x-1][y-1]!=0) return 0; break;
-		case 9: if(skreen[x+1][y-1]!=0) return 0; break;
+		case 6: if((skreen[x+1][y]==1)||(x+1>(w/b))) return 0; break;
+		case 2: if((skreen[x][y+1]==1)||(y+1>(h/b))) return 0; break;
+		case 4: if((skreen[x-1][y]==1)||(x-1<0)) return 0; break;
+		case 8: if((skreen[x][y-1]==1)||(y-1<0)) return 0; break;
 	}
 	return 1;
 }
 function drawRundumLine(){
-	lien = Math.floor(Math.random()*(h/b/3))*3-1;
+	lien = Math.floor(Math.random()*(h/b/4))*4-1;
 	a = Math.floor(Math.random()*(w/b))
 	l = Math.floor(Math.random()*((w/b)-a));
 	for(i=0;i<l;i++){
@@ -82,8 +142,25 @@ function drawRundumLine(){
 for(i=0;i<(w/b);i++){
 	skreen[i][(h/b)-1] = 1;
 }
-for(k=0;k<20;k++)
+for(k=0;k<35;k++)
 	drawRundumLine();
+for(i=0;i<(w/b);i++){
+	for(j=0;j<(h/b);j++){
+		if((skreen[i][j] == 1)&&(Math.random()<0.2)){
+			skreen[i][j-1] = 3;
+		}
+	}
+}
+for(i=0;i<(w/b);i++){
+	for(j=0;j<(h/b);j++){
+		if((skreen[i][j] == 1)&&(Math.random()<0.02)){
+			skreen[i][j-1] = 9;
+			botx.push(i);
+			boty.push(j-1);
+			botc.push(0);
+		}
+	}
+}
 drawSkreen();
 window.onkeydown = function(event){
 	switch(event.keyCode){
@@ -103,5 +180,6 @@ setInterval('if(mov==1) movePc(4)',100);
 setInterval('if(mov==2) movePc(6)',100);
 setInterval('if(jmp==1) movePc(8)',100);
 setInterval('if(jmp==0) movePc(2)',150);
+setInterval('moveNpc()',200);
 </script>
 </html>
