--- a/jside.htm
+++ b/jside.htm
@@ -38,6 +38,9 @@ html, body {
 	width: 100%;
 	border: 0;
 	border-bottom: 1px solid #888;
+	-moz-tab-size: 4;
+	-o-tab-size: 4;
+	tab-size: 4;
 }
 #log {
 	height: 140px;
@@ -61,7 +64,7 @@ html, body {
 	<span id=slots></span>
 	<div onclick='nowslot="NEWSLOT";document.querySelector("#editor").value=""; document.title="NEWSLOT // JSIDE"'>+</div>
 </div>
-<textarea id='editor'></textarea>
+<textarea id='editor' spellcheck='false'></textarea>
 <div id='log'></div>
 </body>
 <script>
@@ -94,6 +97,15 @@ window.onkeyup = function(event){
 }
 window.onerror = function(message, url, linenumber){
 	document.getElementById('log').innerHTML = 'Error: '+message+' in '+url+' on line '+linenumber+'<br>' + document.getElementById('log').innerHTML;
+}
+document.getElementById('editor').onkeydown = function(event){
+	if(event.keyCode==9){
+		var start = this.selectionStart;
+		var end = this.selectionEnd;
+		this.value = this.value.substring(0,start) + '\t' + this.value.substring(end);
+		this.selectionStart = this.selectionEnd = start + 1;
+		event.preventDefault();
+	}
 }
 slotMenu();
 </script>
