--- a/jside.htm
+++ b/jside.htm
@@ -32,7 +32,7 @@ html, body {
 }
 #editor {
 	margin: 0px;
-	font: 400 10pt fira mono ot;
+	font: 800 10pt "xos4 Terminus", Consolas, monospace;
 	padding: 8px;
 	height: calc(100% - 172px);
 	width: 100%;
@@ -45,7 +45,7 @@ html, body {
 #log {
 	height: 140px;
 	width: 100%;
-	font: 400 10pt fira mono ot;
+	font: 400 10pt Cousine, monospace;
 	padding: 8px;
 	overflow-y: scroll;
 	background: #222;
